# shaderpg

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs
www/: package-lock.json  package.json
www/public/: index.html
www/src/: App.vue
www/src/assets/: default.wgsl  mandelbrot.wgsl  ray-tracer.wgsl  shaderpg.frag.wgsl
www/src/components/: Editor.vue  Render.vue  ShaderEditor.vue
