[package]
name = "shaderpg"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2021"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-sys = "0.3"
wasm-bindgen = "0.2"
wee_alloc = "0.4"
console_error_panic_hook = "0.1"
srs2dge = { path = "../srs2dge" }
bytemuck = { version = "1.9", features = ["derive"] }
glam = { version = "0.20", features = ["serde", "bytemuck"] }
anyhow = "1.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "af259aa1", features = [
	"webgl",
] }
winit = "0.26"
instant = "0.1.12"
console_log = { version = "0.2.0", features = ["color"] }
log = "0.4.17"
